# nemedraft-client

./: .env.client  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  cliff.toml  nemedraft_overlay.spec  pyproject.toml
.github/: release.yml
.github/workflows/: build-client.yml  refresh-grpid-map.yml  workflow-guard.yml
assets/: icon.icns  version_info.txt
client/: __init__.py
client/overlay/: __init__.py  api_client.py  arena_memory.py  auth_client.py  boot.py  (+17 more)
docs/: draft-state-investigation.md
scripts/: build_overlay.py  diag_arena_memory.py  diag_chain_dist.py  diag_deck_pool_live.py  diag_draft_state.py  diag_draft_targeted.py  diag_find_class.py  diag_image.py  diag_list_classes.py  diag_smoke_draft_state.py  diag_verify_format_fix.py  refresh_grpid_map.py  run_overlay.py  test_arena_memory.py
tests/: test_arena_poller.py  test_auth_client.py  test_auth_polling.py  test_card_mapper.py  test_deck_builder.py  test_deck_export.py  test_draft_state.py  test_draft_summary.py  test_event_dedupe.py  test_last_pick.py  test_log_watcher_clamp.py  test_log_watcher_indexing.py  test_log_watcher_scene_change.py  test_memory_watcher.py  test_notification_bus.py  test_overlay_startup_imports.py  test_overlay_ui.py  test_pack_rail.py  test_pick_history_nav.py  test_prediction_manager.py  test_screen_utils.py  test_set_data_manager.py  test_settings_live_apply.py  test_shortcuts.py  test_simulator_e2e.py  test_single_instance.py  test_summary_tab.py  test_tab_bar_opacity.py  test_theme_snapshots.py  test_toast.py  test_view_mode.py  test_worker_pool.py
(+67 files in other folders)
