[project]
name = "nemedraft-client"
version = "0.1.0"
description = "MTG Arena draft pick assistant — overlay client"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "httpx>=0.27",
    "polars>=1.0",
    "pyarrow>=15.0",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
client = [
    "PySide6>=6.6",
    "pyinstaller>=6.0",
    "pymem>=1.13 ; sys_platform == 'win32'",
    "pefile>=2024.8 ; sys_platform == 'win32'",
]

[project.scripts]
nemedraft-overlay = "client.overlay.main:main"
nemedraft-build = "scripts.build_overlay:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["client*", "common*"]
namespaces = true

[tool.setuptools.package-data]
"client.overlay.i18n" = ["*.json"]
